Add Parameter validator

--- a/templates/paths.d.ts.ejs
+++ b/templates/paths.d.ts.ejs
@@ -5,6 +5,7 @@
 interface Validator {
   response: (data: any) => boolean
   requestBody: (data: any) => boolean
+  parameters: (data: any) => boolean
 }
 <% paths.forEach(({ funcName }) => { %>
 export type <%= funcName %> = Validator
