--- a/templates/paths.ejs
+++ b/templates/paths.ejs
@@ -63,7 +63,7 @@ function validateRequestBody (operationId, data) {
 }
 
 <% paths.forEach(({ funcName, name }) => { %>
-exports.<%= funcName %> = {
+export const <%= funcName %> = {
   response: data => validateResponse('<%= name %>', data),
   requestBody: data => validateRequestBody('<%= name %>', data),
   parameters: data => validateParameters('<%= name %>', data)
