Update type definition template

--- a/templates/paths.d.ts.ejs
+++ b/templates/paths.d.ts.ejs
@@ -8,5 +8,5 @@ interface Validator {
   parameters: (data: any) => boolean
 }
 <% paths.forEach(({ funcName }) => { %>
-export type <%= funcName %> = Validator
+export const <%= funcName %>: Validator
 <% }); %>
